--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <!--         <link rel="stylesheet"
             href="http://localhost:8080/libs/css/jquery.mobile-1.4.5.min.css"> -->
         <link rel="stylesheet"
-            href="./style.css">
+            href="static/style.css">
 
 <!--         <script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
         <script src="http://localhost:8080/libs/js/chroma.min.js"></script>
         <script src="http://localhost:8080/libs/js/jquery-1.11.2.js"></script>
         <script src="http://localhost:8080/libs/js/jquery.mobile-1.4.5.min.js"></script> -->
-        <script src="./modulations.js"></script>
+        <script src="static/modulations.js"></script>
 
     </head>
 
