modularise. Add ES6

--- a/statics/index.html
+++ b/statics/index.html
@@ -15,7 +15,7 @@
         <script src="libs/js/chroma.min.js"></script>
         <script src="libs/js/jquery-1.11.2.js"></script>
         <script src="libs/js/jquery.mobile-1.4.5.min.js"></script>
-        <script src="modulations.js"></script>
+        <script src="main.bundle.js"></script>
 
     </head>
 
