--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
             height=device-height, user-scalable=no" />
         <title>Modulations</title>
 
-        <link rel="stylesheet" href="libs/css/jquery.mobile-1.4.5.min.css">
+        <link rel="stylesheet" href="statics/libs/css/jquery.mobile-1.4.5.min.css">
         <link rel="stylesheet" href="style.css">
 
         <!-- <script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script> -->
-        <script src="libs/js/chroma.min.js"></script>
-        <script src="libs/js/jquery-1.11.2.js"></script>
-        <script src="libs/js/jquery.mobile-1.4.5.min.js"></script>
+        <script src="statics/libs/js/chroma.min.js"></script>
+        <script src="statics/libs/js/jquery-1.11.2.js"></script>
+        <script src="statics/libs/js/jquery.mobile-1.4.5.min.js"></script>
         <script src="main.bundle.js"></script>
 
     </head>
