--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <script src="statics/libs/js/chroma.min.js"></script>
         <script src="statics/libs/js/jquery-1.11.2.js"></script>
         <script src="statics/libs/js/jquery.mobile-1.4.5.min.js"></script>
-        <script src="main.bundle.js"></script>
+        <script src="statics/main.bundle.js"></script>
 
     </head>
 
