--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <title>Modulations</title>
 
         <link rel="stylesheet" href="statics/libs/css/jquery.mobile-1.4.5.min.css">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="statics/style.css">
 
         <!-- <script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script> -->
         <script src="statics/libs/js/chroma.min.js"></script>
