--- a/statics/index.html
+++ b/statics/index.html
@@ -1,65 +1,83 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="HandheldFriendly" content="true" />
-        <meta name="viewport" content="width=device-width,
-            height=device-height, user-scalable=no" />
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Modulations</title>
 
-        <link rel="stylesheet" href="libs/css/jquery.mobile-1.4.5.min.css">
+        <!-- <link rel="icon" href="../../favicon.ico"> -->
+        <link href="libs/css/bootstrap.min.css" rel="stylesheet">
+
+        <!-- <link rel="stylesheet" href="libs/css/jquery.mobile-1.4.5.min.css"> -->
         <link rel="stylesheet" href="style.css">
 
+
+
         <!-- <script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script> -->
-        <script src="libs/js/chroma.min.js"></script>
+
         <script src="libs/js/jquery-1.11.2.js"></script>
-        <script src="libs/js/jquery.mobile-1.4.5.min.js"></script>
+        <!-- <script src="libs/js/jquery.mobile-1.4.5.min.js"></script> -->
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+
+        <script src="libs/js/bootstrap.min.js"></script>
+
+        <script src="libs/js/chroma.min.js"></script>
         <script src="main.bundle.js"></script>
 
     </head>
 
 
 <body>
-	<canvas id="canvas" width="800" height="256" ></canvas>
-	<div class="ui-grid-c">
-		<div class="ui-block-a">
-			<div id="AMButton">
-			    <button id="AM" class="ui-btn ui-btn-inline
-			    ui-corner-all ui-shadow">AM
-			    </button>
-			</div>
-			<div id="FMButton">
-			    <button id="FM" class="ui-btn ui-btn-inline
-			    ui-corner-all ui-shadow">FM
-			    </button>
-			</div>
-		</div>
-		<div id="carFreqSlider" class="ui-block-b">
-		    <label for="carFreq">Carrier Frequency</label>
-		    <input type="range" name="carFreq" id="carFreq"
-		value="300" min="30" max="5000" step ="10" data-highlight="true"/>
-		</div>
-		<div id="modAmplSlider" class="ui-block-c">
-		    <label for="modAmpl">Modulation depth</label>
-		    <input type="range" name="modAmpl" id="modAmpl"
-		value="100" min="0" max="1000" step ="10" data-highlight="true"/>
-		</div>
-		<div id="modFreqSlider" class="ui-block-d">
-		    <label for="modFreq">Modulator frequency</label>
-		    <input type="range" name="modFreq" id="modFreq"
-		value="2" min="0" max="5000" step ="1" data-highlight="true"/>
-		</div>
-	</div>
 
-	<div id="stopButt">
-	    <button id="stop" class="ui-btn ui-btn-inline
-	    ui-corner-all ui-shadow">Stop
-	    </button>
-	</div>
+<nav class="navbar navbar-dark bg-dark">
+  <a class="navbar-brand" href="#">FM-AM</a>
+  <a class="navbar-brand" href="https://github.com/hadrienj/FM-AM">
+    <img src="images/GitHub-Mark-Light-120px-plus.png" width="30" height="30" alt="dd">
+  </a>
+</nav>
 
-	<div class='chart'></div>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-1 align-self-center">
+    			<div id="AMButton">
+            <button id="AM" class="btn btn-info">AM</button>
+    			</div>
+        </div>
+        <div class="col-sm-1 align-self-center">
+    			<div id="FMButton">
+            <button id="FM" class="btn btn-info">FM</button>
+    			</div>
+    		</div>
+        <div class="col-sm align-self-center">
+          <div id="stopButt">
+            <button id="stop" class="btn btn-info">Stop</button>
+          </div>
+        </div>
 
-</body>
+        <div class="col-sm">
+  		    <label for="carFreq" class="text">Carrier Frequency</label>
+  		    <input type="range" name="carFreq" id="carFreq" class='slider'
+      		  value="300" min="30" max="5000" step ="10" data-highlight="true"/>
+        </div>
+        <div class="col-sm">
+  		    <label for="modAmpl" class="text">Modulation Depth</label>
+  		    <input type="range" name="modAmpl" id="modAmpl" class='slider'
+      		  value="100" min="0" max="1000" step ="10" data-highlight="true"/>
+        </div>
+        <div class="col-sm">
+  		    <label for="modFreq" class="text">Modulator Frequency</label>
+  		    <input type="range" name="modFreq" id="modFreq" class='slider'
+      		  value="2" min="0" max="5000" step ="1" data-highlight="true"/>
+        </div>
+      </div>
+
+      <canvas id="canvas" width="800" height="256" ></canvas>
+
+      </div>
+    </div><!-- /.container -->
+
+  </body>
 </html>
 
