--- a/statics/index.html
+++ b/statics/index.html
@@ -9,15 +9,9 @@
         <!-- <link rel="icon" href="../../favicon.ico"> -->
         <link href="libs/css/bootstrap.min.css" rel="stylesheet">
 
-        <!-- <link rel="stylesheet" href="libs/css/jquery.mobile-1.4.5.min.css"> -->
         <link rel="stylesheet" href="style.css">
 
-
-
-        <!-- <script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script> -->
-
         <script src="libs/js/jquery-1.11.2.js"></script>
-        <!-- <script src="libs/js/jquery.mobile-1.4.5.min.js"></script> -->
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
 
@@ -73,11 +67,10 @@
         </div>
       </div>
 
-      <canvas id="canvas" width="800" height="256" ></canvas>
+      <canvas id="canvas" width="800" height="256"></canvas>
 
       </div>
-    </div><!-- /.container -->
-
+    </div>
   </body>
 </html>
 
