--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
         <title>Modulations</title>
 
         <!-- <link rel="icon" href="../../favicon.ico"> -->
-        <link href="libs/css/bootstrap.min.css" rel="stylesheet">
+        <link href="statics/libs/css/bootstrap.min.css" rel="stylesheet">
 
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="statics/style.css">
 
-        <script src="libs/js/jquery-1.11.2.js"></script>
+        <script src="statics/libs/js/jquery-1.11.2.js"></script>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
 
-        <script src="libs/js/bootstrap.min.js"></script>
+        <script src="statics/libs/js/bootstrap.min.js"></script>
 
-        <script src="libs/js/chroma.min.js"></script>
-        <script src="main.bundle.js"></script>
+        <script src="statics/libs/js/chroma.min.js"></script>
+        <script src="statics/main.bundle.js"></script>
 
     </head>
 
@@ -67,9 +67,10 @@
         </div>
       </div>
 
-      <canvas id="canvas" width="800" height="256" ></canvas>
+      <canvas id="canvas" width="800" height="256"></canvas>
 
       </div>
     </div>
   </body>
 </html>
+
