remove fm in readme

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <nav class="navbar navbar-dark bg-dark">
   <a class="navbar-brand" href="#">FM-AM</a>
   <a class="navbar-brand" href="https://github.com/hadrienj/FM-AM">
-    <img src="images/GitHub-Mark-Light-120px-plus.png" width="30" height="30" alt="dd">
+    <img src="statics/images/GitHub-Mark-Light-120px-plus.png" width="30" height="30" alt="dd">
   </a>
 </nav>
 
@@ -67,7 +67,7 @@
         </div>
       </div>
 
-      <canvas id="canvas" width="800" height="256"></canvas>
+      <canvas id="canvas"  height="256"></canvas>
 
       </div>
     </div>
